# OracleQuery

./: .gitignore  Cargo.toml  README.md  optimizer.sh
contracts/oracle-querier/: Cargo.toml
contracts/oracle-querier/.cargo/: config
contracts/oracle-querier/src/: contract.rs  error.rs  querier.rs  state.rs
