[package]
name = "oracle-querier"
version = "0.1.1"
authors = ["Ho Ba Nguyen <expertdicer@gmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = ["cosmwasm-std/stargate"]
backtraces = ["cosmwasm-std/backtraces"]


[dependencies]
cosmwasm-std = { version = "1.1.3", features = ["stargate"] }
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
juno-querier = { path = "../../packages/juno-querier"}
cw-storage-plus  = { version = "0.16.0" } 
cosmos-sdk-proto = { path = "../../packages/cosmos-sdk-proto", version = "0.14.0"}
prost = "0.11"
prost-types = "0.11" 

[profile.dev]
overflow-checks = true